--- a/css/main.css
+++ b/css/main.css
@@ -951,9 +951,8 @@ h6 {
 .book-details__container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
-  position: relative;
 }
 
 .book-details__column--narrow {
@@ -961,7 +960,7 @@ h6 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  flex-basis: 30rem;
+  min-width: 30rem;
 }
 
 .book-details__column--wide {
@@ -971,7 +970,6 @@ h6 {
   align-items: flex-start;
   flex: auto;
   padding: 0 4rem;
-  background-color: #EEE;
 }
 
 .book-details__img {
@@ -993,8 +991,19 @@ h6 {
   margin: 3rem 0;
 }
 
+.book-details__additional-info {
+  margin-top: 3rem;
+  font-style: italic;
+}
+
+.book-details__button {
+  margin: 4rem 1rem 0 0;
+}
+
 .book-details__categories-list {
   width: 100%;
+  max-height: 42rem;
+  overflow-y: scroll;
 }
 
 .book-details__category-item {
@@ -1018,12 +1027,12 @@ h6 {
 }
 
 .book-details__instructions {
-  height: 100px;
-  width: 75%;
-  position: absolute;
-  top: -10rem;
-  left: 0;
-  background-color: #EEE;
+  width: 76%;
+  margin-top: 8rem;
+}
+
+.book-details__instructions > h5 {
+  margin-bottom: 1rem;
 }
 
 /* BOOKS
