Create boilerplate for checkout page.

--- a/scss/pages/_checkout.scss
+++ b/scss/pages/_checkout.scss
@@ -3,6 +3,9 @@
 --------------------------------------------*/
 
 .checkout {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
+
+
+  &__container { @include display-flex; }
 }
