--- a/css/main.css
+++ b/css/main.css
@@ -1190,8 +1190,15 @@ h6 {
 /* CHECKOUT
 --------------------------------------------*/
 .checkout {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
+}
+
+.checkout__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 /* CONTACT
