--- a/scss/pages/_purchaseHistory.scss
+++ b/scss/pages/_purchaseHistory.scss
@@ -3,6 +3,65 @@
 --------------------------------------------*/
 
 .purchase-history {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
+
+
+  &__container {
+    @include display-flex($direction: column);
+    max-width: 1200px;
+  }
+
+
+  &__mobile-scroll-wrapper { width: 100%; }
+
+
+  &__headings {
+    @include display-flex;
+    width: 100%;
+    height: 8rem;
+    text-align: center;
+    background-color: $light-grey;
+    margin-bottom: 1rem;
+
+    &--cover { width: 20%; }
+    &--title { width: 45%; }
+    &--date { width: 15%; }
+    &--download { width: 20%; }
+  }
+
+
+  &__item {
+    @include display-flex;
+    width: 100%;
+    text-align: center;
+
+    &--img-wrapper {
+      width: 20%;
+      height: 16rem; // controls image height
+      padding: 1rem 0;
+    }
+
+    &--title { width: 45%; }
+    &--date { width: 15%; }
+    &--download {
+      width: 20%;
+      &-button { font-family: Poppins; }
+    }
+  }
+}
+
+
+
+
+
+/* MEDIA QUERIES
+--------------------------------------------*/
+@media only screen and (max-width: 1000px) {
+  .purchase-history {
+    &__mobile-scroll-wrapper { overflow-x: scroll }
+    
+    &__headings { width: 900px; }
+    &__item { width: 900px; }
+  }
 }
