--- a/scss/pages/_wishlist.scss
+++ b/scss/pages/_wishlist.scss
@@ -3,6 +3,88 @@
 --------------------------------------------*/
 
 .wishlist {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
+
+
+  &__container {
+    @include display-flex($direction: column);
+    max-width: 1200px;
+  }
+
+
+  &__mobile-scroll-wrapper { width: 100%; }
+
+
+  &__headings {
+    @include display-flex;
+    width: 100%;
+    height: 8rem;
+    text-align: center;
+    background-color: $light-grey;
+    margin-bottom: 1rem;
+
+    &--cover { width: 20%; }
+    &--title { width: 45%; }
+    &--price { width: 15%; }
+    &--add-to-cart { width: 20%; }
+  }
+
+
+  &__item {
+    @include display-flex;
+    width: 100%;
+    text-align: center;
+
+    &--img-wrapper {
+      width: 20%;
+      height: 16rem; // controls image height
+      padding: 1rem 0;
+    }
+
+    &--title { width: 45%; }
+    &--price { width: 15%; }
+    &--add-to-cart {
+      width: 20%;
+      &-button { font-family: Poppins; }
+    }
+  }
+
+
+  &__continue-shopping {
+    @include display-flex($justify: flex-start);
+    width: 100%;
+    height: 8rem;
+    background-color: $light-grey;
+    margin-top: 1rem;
+    padding-left: 8rem;
+    line-height: initial;
+  }
+}
+
+
+
+
+
+/* MEDIA QUERIES
+--------------------------------------------*/
+@media only screen and (max-width: 1000px) {
+  .wishlist {
+    &__mobile-scroll-wrapper { overflow-x: scroll }
+    
+    &__headings { width: 900px; }
+    &__item { width: 900px; }
+  }
+}
+
+
+@media only screen and (max-width: 800px) {
+  .wishlist__continue-shopping {
+    padding-left: 0;
+    background-color: $white;
+  }
+  .wishlist__button {
+    width: 100%;
+    margin-top: 2rem;
+  }
 }
