--- a/scss/pages/_loginRegister.scss
+++ b/scss/pages/_loginRegister.scss
@@ -3,6 +3,50 @@
 --------------------------------------------*/
 
 .login-register {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
+
+  &__container { @include display-flex($justify: space-around); }
+
+
+  &__column { width: 45%; }
+
+
+  &__heading { margin: 0 0 2rem 2.8rem; } // 2.8rem same as form-box padding below
+
+
+  &__form-box {
+    padding: 2.8rem;
+    border: 1px solid $medium-grey;
+    border-radius: $border-radius-default;
+
+    &.focus { border: 2px solid $color-primary; }
+  }
+}
+
+
+
+
+
+@media only screen and (max-width: 1200px) {
+  .login-register__container { justify-content: space-between; }
+}
+
+@media only screen and (max-width: 1000px) {
+  .login-register {
+    &__container { flex-direction: column; }
+
+    &__column { width: 80%; }
+
+    &__form-box { margin-bottom: 4rem; }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .login-register__column { width: 100%; }
+}
+
+
+@media only screen and (max-width: 600px) {
+  .login-register__form-box { padding: 1.6rem; }
 }
