--- a/css/main.css
+++ b/css/main.css
@@ -591,6 +591,10 @@ h6 {
   font-size: 1rem;
 }
 
+.form__label > .subtle {
+  font-weight: 400;
+}
+
 .form__error {
   font-weight: 600;
   font-size: 1.2rem;
