Create admin_home.php and related css.

--- a/scss/pages/_adminHome.scss
+++ b/scss/pages/_adminHome.scss
@@ -3,33 +3,32 @@
 --------------------------------------------*/
 
 .admin-home {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
 
-  &__container {
-    max-width: 1200px;
-    padding: 12rem 0;
+
+  &__container { max-width: 1200px; }
+
+
+  &__heading {
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+  
+  &__sub-heading {
+    text-align: center;
+    margin-bottom: 6rem;
   }
 
-  &__heading { text-align: center; }
-
-  &__user {
-    text-align: right;
-    margin: 2rem 0;
-    font-size: 1.8rem;
-    font-weight: 600;
-    line-height: 1.8rem;
-    letter-spacing: 0.2rem;
-  }
 
   &__button-selectors {
     @include display-flex;
     flex-wrap: wrap;
   }
 
+
   &__button {
-    height: 12rem;
-    line-height: 12rem;
+    line-height: 10rem;
     width: 40rem;
     max-width: 40rem;
     min-width: 40rem;
