--- a/scss/pages/_adminNewUser.scss
+++ b/scss/pages/_adminNewUser.scss
@@ -3,16 +3,15 @@
 --------------------------------------------*/
 
 .admin-new-user {
-  min-height: 100%;
   width: 100%;
+  padding: 8rem 0;
 
   &__container {
     width: 30%;
     max-width: 1200px;
-    padding: 12rem 0;
   }
 
-  &__heading {
+  &__description {
     text-align: center;
     margin-bottom: 8rem;
   }
