--- a/scss/pages/_adminChangeBooks.scss
+++ b/scss/pages/_adminChangeBooks.scss
@@ -1,8 +1,8 @@
 
-/* ADMIN CHANGE Films
+/* ADMIN CHANGE BOOKS
 --------------------------------------------*/
 
-.admin-change-films {
+.admin-change-books {
   min-height: 100%;
   width: 100%;
 
@@ -11,7 +11,7 @@
     padding: 12rem 0;
   }
 
-  &__heading {
+  &__description {
     text-align: center;
     margin-bottom: 8rem;
   }
