--- a/scss/pages/_adminNewBook.scss
+++ b/scss/pages/_adminNewBook.scss
@@ -1,18 +1,17 @@
 
-/* ADMIN NEW FILM
+/* ADMIN NEW BOOK
 --------------------------------------------*/
 
-.admin-new-film {
-  min-height: 100%;
+.admin-new-book {
   width: 100%;
+  padding: 8rem 0;
 
   &__container {
     width: 30%;
     max-width: 1200px;
-    padding: 12rem 0;
   }
 
-  &__heading {
+  &__description {
     text-align: center;
     margin-bottom: 8rem;
   }
@@ -33,7 +32,7 @@
 --------------------------------------------*/
 
 @media only screen and (max-width: 1650px) {
-  .admin-new-film {
+  .admin-new-book {
     
     &__container { width: 45%; }
   }
@@ -41,7 +40,7 @@
 
 
 @media only screen and (max-width: 1024px) {
-  .admin-new-film {
+  .admin-new-book {
     
     &__container { width: 55%; }
   }
