--- a/css/main.css
+++ b/css/main.css
@@ -1695,6 +1695,17 @@ h6 {
   margin-bottom: 5rem;
 }
 
+.contact__success {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  color: #008B8B;
+  margin-bottom: 3rem;
+  font-size: 1.8rem;
+}
+
 .contact__icon-wrapper {
   display: flex;
   flex-direction: row;
@@ -2149,19 +2160,23 @@ h6 {
 }
 
 .wishlist__headings--cover {
-  width: 20%;
+  width: 15%;
 }
 
 .wishlist__headings--title {
-  width: 45%;
+  width: 40%;
 }
 
 .wishlist__headings--price {
   width: 15%;
 }
 
-.wishlist__headings--add-to-cart {
+.wishlist__headings--add-to-basket {
   width: 20%;
+}
+
+.wishlist__headings--remove {
+  width: 10%;
 }
 
 .wishlist__item {
@@ -2174,25 +2189,40 @@ h6 {
 }
 
 .wishlist__item--img-wrapper {
-  width: 20%;
+  width: 15%;
   height: 16rem;
   padding: 1rem 0;
 }
 
 .wishlist__item--title {
-  width: 45%;
+  width: 40%;
 }
 
 .wishlist__item--price {
   width: 15%;
 }
 
-.wishlist__item--add-to-cart {
+.wishlist__item--add-to-basket {
   width: 20%;
 }
 
-.wishlist__item--add-to-cart-button {
+.wishlist__item--add-to-basket-button {
   font-family: Poppins;
+}
+
+.wishlist__item--remove {
+  width: 10%;
+}
+
+.wishlist__item--remove-icon {
+  background-color: #FFF;
+  border: none;
+  font-size: 2rem;
+}
+
+.wishlist__item--remove-icon:hover, .wishlist__item--remove-icon.active {
+  cursor: pointer;
+  color: #008B8B;
 }
 
 .wishlist__continue-shopping {
