--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -24,6 +24,17 @@
   }
 
 
+  &__subtle {
+    font-weight: 400;
+    margin: 0.5rem 0 1rem 0;
+  }
+
+
+  &__external-link:hover {
+      color: $color-primary;
+    }
+
+
   &__error {
     font-weight: 600;
     font-size: 1.2rem;
@@ -97,7 +108,7 @@
   }
 
 
-  &__file-upload-button { margin: 1.5rem 0 2.5rem 0; }
+  &__file-upload-button { display: block; margin: 1.5rem 0 2.5rem 0; }
 }
 
 
