--- a/scss/pages/_books.scss
+++ b/scss/pages/_books.scss
@@ -50,6 +50,7 @@
     padding: 0 1rem;
     font-weight: 600;
     border-bottom: 2px dotted $medium-grey;
+    text-decoration: none;
     cursor: pointer;
     @include transition;
 
