--- a/scss/pages/_basket.scss
+++ b/scss/pages/_basket.scss
@@ -51,7 +51,12 @@
       padding: 1rem 0;
     }
 
-    &--title { width: 45%; }
+    &--title {
+      width: 45%;
+      text-decoration: none;
+      &:hover { text-decoration: underline; }
+    }
+
     &--price { width: 20%; }
 
     &--remove {
