--- a/scss/pages/_wishlist.scss
+++ b/scss/pages/_wishlist.scss
@@ -32,6 +32,12 @@
   }
 
 
+  &__empty-alert {
+    text-align: center;
+    padding: 8rem 0;
+  }
+
+
   &__item {
     @include display-flex;
     width: 100%;
@@ -66,7 +72,7 @@
         &:hover,
         &.active {
           cursor: pointer;
-          color: $color-primary;
+          color: $color-warning;
         }
       }
     }
