--- a/css/main.css
+++ b/css/main.css
@@ -2065,7 +2065,7 @@ h6 {
   align-items: center;
   border-bottom: 1px solid #EEE;
   width: 90%;
-  max-width: 80rem;
+  max-width: 70rem;
   padding: 2rem;
 }
 
@@ -2112,19 +2112,20 @@ h6 {
 }
 
 .purchase-history__headings--cover {
-  width: 20%;
+  width: 30%;
 }
 
 .purchase-history__headings--title {
   width: 45%;
 }
 
-.purchase-history__headings--date {
-  width: 15%;
+.purchase-history__headings--download {
+  width: 25%;
 }
 
-.purchase-history__headings--download {
-  width: 20%;
+.purchase-history__empty-alert {
+  text-align: center;
+  padding: 8rem 0;
 }
 
 .purchase-history__item {
@@ -2137,21 +2138,22 @@ h6 {
 }
 
 .purchase-history__item--img-wrapper {
-  width: 20%;
+  width: 30%;
   height: 16rem;
   padding: 1rem 0;
 }
 
 .purchase-history__item--title {
   width: 45%;
+  text-decoration: none;
 }
 
-.purchase-history__item--date {
-  width: 15%;
+.purchase-history__item--title:hover {
+  text-decoration: underline;
 }
 
 .purchase-history__item--download {
-  width: 20%;
+  width: 25%;
 }
 
 .purchase-history__item--download-button {
