--- a/scss/pages/_purchaseHistory.scss
+++ b/scss/pages/_purchaseHistory.scss
@@ -24,10 +24,15 @@
     background-color: $light-grey;
     margin-bottom: 1rem;
 
-    &--cover { width: 20%; }
+    &--cover { width: 30%; }
     &--title { width: 45%; }
-    &--date { width: 15%; }
-    &--download { width: 20%; }
+    &--download { width: 25%; }
+  }
+
+
+  &__empty-alert {
+    text-align: center;
+    padding: 8rem 0;
   }
 
 
@@ -37,15 +42,19 @@
     text-align: center;
 
     &--img-wrapper {
-      width: 20%;
+      width: 30%;
       height: 16rem; // controls image height
       padding: 1rem 0;
     }
 
-    &--title { width: 45%; }
-    &--date { width: 15%; }
+    &--title {
+      width: 45%;
+      text-decoration: none;
+      &:hover { text-decoration: underline; }
+    }
+    
     &--download {
-      width: 20%;
+      width: 25%;
       &-button { font-family: Poppins; }
     }
   }
