--- a/scss/components/_data-table.scss
+++ b/scss/components/_data-table.scss
@@ -11,8 +11,9 @@
 
 .data-table {
   width: 100%;
-  margin: 6rem 0;
+  margin-top: 8rem;
   text-align: center;
+  overflow-x: auto;
 
   &__form {
     margin-bottom: 0.5rem;
@@ -21,14 +22,15 @@
 
   &__heading {
     flex: 1;
+    min-width: 20rem;
     text-align: center;
     height: 3.8rem; // Same as line height
-    margin-right: 1px;
+    margin: 0 1px;
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 3.8rem; // Same as height
     background-color: transparent;
-    color: $white;
+    color: $black;
     border: none;
     outline: none;
     cursor: default;
@@ -36,56 +38,63 @@
 
   &__input {
     flex: 1;
+    min-width: 20rem;
     text-align: center;
     height: 5rem; // Same as line height
     padding: 0 1.5rem;
-    margin-right: 1px;
+    margin: 0 1px;
     font-size: 1.6rem;
     line-height: 5rem; // Same as height
     background-color: transparent;
-    color: $white;
+    color: $black;
     border: none;
 
     &:hover,
     &:focus,
-    &:active { outline: 1px solid $light-grey; }
+    &:active { outline: 1px solid $medium-grey; }
   }
 
   &__textarea {
     flex: 1;
+    min-width: 20rem;
     min-width: 26rem;
     height: 14rem;
     padding: 1rem;
-    margin: 0.8rem 1px 0.8rem 0;
+    margin: 0.8rem 1px;
     line-height: 2rem;
     background-color: transparent;
-    color: $white;
+    color: $black;
     border: none;
 
     &:hover,
     &:focus,
-    &:active { outline: 1px solid $light-grey; }
+    &:active { outline: 1px solid $medium-grey; }
   }
 
-  &__button--hidden { visibility: hidden; }
+  &__button { margin: 0 1rem; }
 
-  & hr { margin-bottom: 2rem; }
+  &__button--hidden {
+    visibility: hidden;
+    margin: 0 1rem;
+  }
+
+  &__remove-icon {
+    min-width: 8rem;
+    background-color: $white;
+    border: none;
+    font-size: 2rem; // same as navigation icon font-size
+    &:hover,
+    &.active {
+      cursor: pointer;
+      color: $color-warning;
+    }
+  }
+
+  & hr {
+    margin-bottom: 2rem;
+    min-width: 64rem;
+  }
 
   // To be given as a class to form inputs
   & .left-align { text-align: left; }
-}
-
-
-
-
-
-/* MEDIA QUERIES
---------------------------------------------*/
-
-// Laptops / tablets
-@media only screen and (max-width: 1400px) {
-  .data-table {
-    overflow-x: scroll;
-    outline: 2px solid $medium-grey;
-  }
 }
